--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jest": "^29.7.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "reactflow": "^11.11.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.4",
