--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@next/mdx": "^14.1.0",
     "@tensorflow/tfjs": "^4.17.0",
     "jest": "^29.7.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "reactflow": "^11.11.1"
+    "reactflow": "^11.11.1",
+    "uuid": "^9.0.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.4",
